<resources>
    <string name="app_name">dog</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_confirm_password">Powtórz hasło</string>
    <string name="prompt_type_owner">Jestem właścicielem psa</string>
    <string name="prompt_type_sitter">Chce wyprowadzać psy</string>
    <string name="prompt_type_activationAccount">Wpisz kod aktywacyjny, który dostałeś na adres email podany podczas rejestracji</string>
    <string name="prompt_sendCode">Wyślij ponownie</string>
    <string name="prompt_firstname">Imię</string>
    <string name="prompt_surname">Nazwisko</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_up">Zarejestruj</string>
    <string name="action_login">Logowanie</string>
    <string name="action_register">Rejestracja</string>
    <string name="action_forget">Zapomniałem hasła</string>
    <string name="action_sign_out">Wyloguj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_activation">Zły kod</string>
    <string name="sendCodeSuccess">Wysłano kod ponownie</string>
    <string name="auth_error">Has occurred a error on authentication!</string>
    <string name="auth_invalid">Login lub hasło są nieprawidłowe</string>
    <string name="sendCode_error">Nie udało się wysłać wiadomości z kodem</string>
    <string name="ActiveAccount_error">Niepoprawny kod aktywacji</string>
    <string name="register_invalid">Rejestracja nie powiodła się</string>
    <string name="authenticating">Logowanie ...</string>
    <string name="cards_invalid">Invalid cards</string>
    <string name="card_format_error">Has ocurred an error on format data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_logout">Wyloguj</string>
    <string name="getProfile_error">Nie udało się pobrać danych</string>
    <string name="prompt_phone">Numer telefonu</string>
    <string name="prompt_desc">Opis</string>
    <string name="prompt_update">Aktualizuj</string>
    <string name="getDog_error">Nie udało się pobrać listy psów</string>
    <string name="menu_title">Więcej</string>
    <string name="postDog_error">Nie udało się utworzyć psa</string>
    <string name="getService_error">Nie udało się pobrać usług</string>
    <string name="getBooking_error">Nie udało się pobrać zamówień</string>
    <string name="getSearch_error">Nie udało się pobrać wyszukiwania</string>
    <string name="confirmBooking">Potwierdzono zapytanie</string>
    <string name="deleteDog">Usunięto pieska z bazy danych</string>

    <string-array name="gender">
        <item>pies</item>
        <item>suka</item>

    </string-array>
</resources>